--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,8 +45,46 @@
             </div>
                <div class="bcards">
                    <div class="column">
-
+                    <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.18169-9/1524976_642751309104969_157558238_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=e3f864&_nc_ohc=71dG0YKpK0AAX--j3N9&_nc_ht=scontent-sea1-1.xx&oh=00_AT-49e2RhmBIJ7sqC-JgjN_MUKTIEdiv9LHQYrqmzIxdmg&oe=61DD3663">
+                    <p>3C Grill <br> 4 N Main Street • 208- 425-9110 • 3cgrill@gmail.com • http://3c-grill.com</p>
                    </div>
+                   <div class="column">
+                    <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t39.30808-6/222791570_303325151539405_773074933299305121_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWyYnzhQ2fcAX-M3arg&_nc_ht=scontent-sea1-1.xx&oh=00_AT9ss-Vg1iTIbMwArPUW18XFEMk-RYgFAEIlriLrkl5tiQ&oe=61BE4A8B">
+                    <p>Black Canyon Elementary <br> 605 S 4th West • 208- 425-3984  • http://ges.sd148.org/</p>
+                   </div> 
+                   <div class="column">
+                    <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.18169-9/18402764_679421145588298_8694564225665805043_n.png?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=oVcQsvbiGVkAX9Mf0FL&_nc_ht=scontent-sea1-1.xx&oh=00_AT897IAeWf9rHxFAPEnZze70ZEn2-uaCQl71tLamm0WFpw&oe=61DFF09B">
+                    <p>Black Canyon Trout Farm <br> 1681 Black Canyon Lane • 208- 425-3239 • stephen@blackcanyontroutfarm.com  • www.blackcanyontrout.com/</p>
+                   </div> 
+                   <div class="column">
+                   <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t39.30808-6/246652455_1315785365532536_4965854245593775691_n.png?_nc_cat=110&ccb=1-5&_nc_sid=e3f864&_nc_ohc=xjv5OvLjKGoAX9Iiw-e&_nc_ht=scontent-sea1-1.xx&oh=00_AT-yUwRSsifL_myO-bRF64gF6g_dpu7wx1Fiz1yMMrWwXQ&oe=61BDE120">
+                  <p>Caribou Twistars <br> 14 N Main Street • 307-287-8479 • cariboutwistars@gmail.com • https://www.facebook.com/Caribou-TwiStars-Gymnastics-667961886981557</p> 
+                </div>
+                <div class="column">
+                   <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.18169-9/12994554_1708980409356006_808094045323808288_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=19026a&_nc_ohc=HJBx2uuUv78AX_rX2w3&tn=D8_H8fxH3iRNz33s&_nc_ht=scontent-sea1-1.xx&oh=00_AT_IbfX5tYBq804KLsrNmw3bDQ59c0-p8cvGV79kwaa20Q&oe=61E008EF">
+                  <p>Centennial Lube & Small Engine Service <br> 4 S Main Street • 208-425-3692 • office@centlube.com • https://www.centlube.com</p> 
+                </div>
+                <div class="column">
+                   <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.18169-9/1011165_556231151087431_461715598_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=e3f864&_nc_ohc=iF4hP2FPp88AX__AQ1k&_nc_ht=scontent-sea1-1.xx&oh=00_AT8PHoNCvUWMdqyIOZg3ddMGiYMoxsnjif3jffadaU12Pw&oe=61DD5D14">
+                  <p>Gibbs Potato Shack <br> 602 Hwy 34  • 208-425-3821 • gibbsjlw@gmail.com • https://www.gibbsfarms.com</p> 
+                </div>
+                <div class="column">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fww1.prweb.com%2Fprfiles%2F2011%2F07%2F13%2F11968843%2FGNPLogowBorder.jpg&f=1&nofb=1">
+                    <p>London Drug <br> 6 S Main Street • 208- 425-3766 • http://londondrugrx.com</p>
+                   </div>
+                   <div class="column">
+                    <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/54519518_589333568208126_5532247026361696256_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_ohc=sY2454IZSBEAX8bLVWQ&_nc_ht=scontent-sea1-1.xx&oh=00_AT9yCIit04dGWK8ZwAX_DZ6RB_6nNl-Opak9xcFtvysGLg&oe=61E05074">
+                    <p>Mikenna Atkinson Photography <br>  801-791-6163 • mikennaatkinsonphotography@gmail.com • https://www.facebook.com/mikennaatkinsonphotog</p>
+                   </div>
+                   <div class="column">
+                    <img src="images/professionalhm.jpg">
+                    <p>Professional Home & Landscape <br> 2246 N Lago Rd • 208-530-6817 • paul.warnes@hotmail.com </p>
+                   </div>
+                   <div class="column">
+                    <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/139801345_239604824273274_6727075997069538912_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=kYZWOU3SQh8AX-b6sJm&tn=D8_H8fxH3iRNz33s&_nc_ht=scontent-sea1-1.xx&oh=00_AT8UPvvkjeTIO4cK7O3NhARvVezuKE-qirdd4btiYuELkQ&oe=61E1491D">
+                    <p>Vivid Art Printing <br>  208- 589-0353 • vividartprinting@gmail.com • https://www.facebook.com/VividArtsPrinting</p>
+                   </div>
+
 
                </div>
             </main>
